stacks/k8s_utils/manifests/miztiik-automation-ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: miztiik-automation-ns
  labels:
    app: shopfront
    role: webfront
    project: service-mesh-in-eks
    owner: miztiik-automation
    compute_provider: on_demand
    dept: engineering
    team: red-shirts
  annotations:
    contact: github.com/miztiik
